Add building release and publishing to central

--- a/build.gradle
+++ b/build.gradle
@@ -66,8 +66,8 @@ publishing {
             def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
             credentials {
-                username sonatypeUsername
-                password sonatypePassword
+                username findProperty("sonatypeUsername")
+                password findProperty("sonatypePassword")
             }
         }
     }
@@ -75,6 +75,10 @@ publishing {
 
 
 signing {
+    def signingKeyId = findProperty("signingKeyId")
+    def signingKey = findProperty("signingKey")
+    def signingPassword = findProperty("signingPassword")
+    useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
     sign publishing.publications.mavenJava
 }
 
