--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,4 +19,4 @@ jobs:
         with:
           java-version: 1.8
       - name: Test with Gradle
-        run: gradle test
+        run: gradle clean test
