--- a/build.gradle
+++ b/build.gradle
@@ -110,11 +110,12 @@ dependencies {
     implementation 'org.web3j:crypto:5.0.0'
 
     // === For Zk Signing ===
-    implementation 'io.zksync.sdk:zkscrypto:0.0.3'
+    implementation 'io.zksync.sdk:zkscrypto:0.0.5.3'
     implementation 'net.java.dev.jna:jna:5.6.0'
     implementation 'org.scijava:native-lib-loader:2.3.4'
 
     // === Test dependencies ===
     testImplementation 'junit:junit:4.13.1'
     testImplementation "org.mockito:mockito-inline:+"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
 }
